# bytedata-extra

./: Cargo.toml  rust-toolchain.toml
bytedata-charset/: Cargo.toml
bytedata-charset/src/: ascii7.rs  ascii7_compat.rs  decode_stream.rs  detect.rs  endian.rs  lib.rs  result.rs  traits.rs  utf16.rs  utf32.rs  utf8.rs
bytedata-charset/src/iso_8859/: iso_1.rs  iso_10.rs  iso_11.rs  iso_13.rs  iso_14.rs  iso_15.rs  iso_16.rs  iso_2.rs  iso_3.rs  iso_4.rs  iso_5.rs  iso_6.rs  iso_7.rs  iso_8.rs  iso_9.rs  mod.rs
bytedata-charset/src/multi_byte/: gbk.rs  java_utf.rs  mod.rs
bytedata-charset/src/multi_byte/big5/: big5_cp.rs  index.big5.txt  mod.rs
bytedata-charset/src/multi_byte/gb18030/: cp_gb18030.rs  gb18030_cp.rs  gb18030_cp_ranges.rs  mod.rs
bytedata-charset/src/single_byte/: ibm866.rs  koi8_r.rs  koi8_u.rs  macintosh.rs  mod.rs  single_byte.rs  x_mac_cyrillic.rs  x_user_defined.rs
bytedata-charset/src/windows/: mod.rs  win_1250.rs  win_1251.rs  win_1252.rs  win_1253.rs  win_1254.rs  win_1255.rs  win_1256.rs  win_1257.rs  win_1258.rs  win_874.rs
bytedata-io/: Cargo.toml
bytedata-io/src/: error.rs  lib.rs
bytedata-io/src/impls/: byte_queue.rs  byte_stream.rs  mod.rs  string_queue.rs
bytedata-io/src/std/: buffered.rs  mod.rs  read.rs
bytedata-io/src/tokio_1/: buffered.rs  read.rs
bytedata-io/src/traits/: byte_data_source.rs  mod.rs  string_data_source.rs
bytedata-pattern/: Cargo.toml
bytedata-pattern-core/: Cargo.toml
bytedata-pattern-core/src/: charclass.rs  contextclass.rs  error.rs  exec_state.rs  flags.rs  group.rs  lib.rs  test.rs
bytedata-pattern-core/tests/: simple.rs
bytedata-pattern-macros/: Cargo.toml
bytedata-pattern-macros/src/: lib.rs  parse_tokens.rs
bytedata-pattern/src/: lib.rs
bytedata-unicode/: Cargo.toml
bytedata-unicode-files/: Cargo.toml
bytedata-unicode-files/src/: error.rs  lib.rs  line_source.rs  names_list.rs  title_page.rs
bytedata-unicode-macros/: Cargo.toml
bytedata-unicode-macros/src/: lib.rs  names_list.rs  util.rs
bytedata-unicode/unicode/: NamesList.txt
bytedata-xml/: Cargo.toml
bytedata-xml-core/: Cargo.toml
bytedata-xml-core/src/: lib.rs
bytedata-xml-core/src/event/: attlist_decl.rs  attribute.rs  cdata.rs  char_ref.rs  comment.rs  doctype.rs  element_decl.rs  enitity_ref.rs  event_enum.rs  markup_decl.rs  mod.rs  nmtoken.rs  pe_ref.rs  pi.rs  spanned.rs  tag_end.rs  tag_start.rs
bytedata-xml-core/src/parser/: event_parser.rs  location.rs  mod.rs  parse_item.rs
