[workspace]
members = [
    "bytedata-charset",
    "bytedata-io",
    "bytedata-pattern",
    "bytedata-pattern-core",
    "bytedata-pattern-macros",
    "bytedata-unicode",
    # "bytedata-unicode-files",
    "bytedata-unicode-macros",
    #"bytedata-xml",
    #"bytedata-xml-core",
]

resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "MIT OR LGPL-3.0-or-later"
repository = "https://github.com/TimLuq/bytedata-extra/"
authors = ["TimLuq"]
