[package]
name = "bytedata-charset"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Character set encoding and decoding for bytedata."
categories = ["network-programming", "data-structures"]
keywords = ["encoding", "decoding", "unicode", "character-set", "charset", "bytedata"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytedata = { git = "https://github.com/TimLuq/bytedata.git", version = "0.1.15", branch = "main", default-features = false, features = ["chunk", "queue"] }

[features]
default = [
    "avx",
    "avx512",
    "nightly",
    "std",
    "ascii7-compat",
    "java",
    "utf-32",
    "windows",
    "web",
]

std = ["alloc"]
alloc = ["bytedata/alloc"]

ascii7-compat = []

single-byte = []
ibm866 = ["single-byte"]
koi8-r = ["single-byte", "ascii7-compat"]
koi8-u = ["single-byte", "ascii7-compat"]
macintosh = ["single-byte", "ascii7-compat"]
x-mac-cyrillic = ["single-byte", "ascii7-compat"]
x-user-defined = ["single-byte", "ascii7-compat"]

iso-8859 = ["ascii7-compat"]
iso-8859-1 = ["iso-8859"]
iso-8859-2 = ["iso-8859"]
iso-8859-3 = ["iso-8859"]
iso-8859-4 = ["iso-8859"]
iso-8859-5 = ["iso-8859"]
iso-8859-6 = ["iso-8859"]
iso-8859-7 = ["iso-8859"]
iso-8859-8 = ["iso-8859"]
iso-8859-9 = ["iso-8859"]
iso-8859-10 = ["iso-8859"]
iso-8859-11 = ["iso-8859"]
iso-8859-13 = ["iso-8859"]
iso-8859-14 = ["iso-8859"]
iso-8859-15 = ["iso-8859"]
iso-8859-16 = ["iso-8859"]
iso-8859-all = ["iso-8859-1", "iso-8859-2", "iso-8859-3", "iso-8859-4", "iso-8859-5", "iso-8859-6", "iso-8859-7", "iso-8859-8", "iso-8859-9", "iso-8859-10", "iso-8859-11", "iso-8859-13", "iso-8859-14", "iso-8859-15", "iso-8859-16"]

multi-byte = []
gbk = ["multi-byte", "gb18030"]
gb18030 = ["multi-byte"]
big5 = ["multi-byte"]
java = ["multi-byte", "utf-16"]

### Placeholder as UTF-8 is always available
utf-8 = []
### Placeholder as UTF-16 is always available
utf-16 = []
### Enabes UTF-32 encoding and decoding
utf-32 = []

windows = ["ascii7-compat"]
windows-874 = ["windows", "iso-8859-11"]
windows-1250 = ["windows", "iso-8859-2"]
windows-1251 = ["windows"]
windows-1252 = ["windows", "iso-8859-1"]
windows-1253 = ["windows", "iso-8859-7"]
windows-1254 = ["windows", "windows-1252"]
windows-1255 = ["windows"]
windows-1256 = ["windows"]
windows-1257 = ["windows"]
windows-1258 = ["windows"]

web = [
    "utf-8",
    "utf-16",
    "ibm866",
    "iso-8859-2",
    "iso-8859-3",
    "iso-8859-4",
    "iso-8859-5",
    "iso-8859-6",
    "iso-8859-7",
    "iso-8859-8",
    #"iso-8859-8-i",
    "iso-8859-10",
    "iso-8859-13",
    "iso-8859-14",
    "iso-8859-15",
    "iso-8859-16",
    "koi8-r",
    "koi8-u",
    "macintosh",
    "windows-874",
    "windows-1250",
    "windows-1251",
    "windows-1252",
    "windows-1253",
    "windows-1254",
    "windows-1255",
    "windows-1256",
    "windows-1257",
    "windows-1258",
    "x-mac-cyrillic",

    "gbk",
    "gb18030",
    "big5",
    #"euc-jp",
    #"iso-2022-jp",
    #"shift_jis",
    #"euc-kr",
    #"replacement",
    "x-user-defined",
]

avx = []
avx512f = []
avx512bw = ["avx512f"]
avx512 = ["avx512f", "avx512bw"]

nightly = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
